# octosuite

./: Dockerfile  README.md  pyproject.toml  pytest.ini
.github/: dependabot.yml
Octosuite GUI/: Octosuite GUI.sln
Octosuite GUI/Octosuite/: AboutBox.Designer.vb  AboutBox.resx  AboutBox.vb  ApiHandler.vb  DataGridViewHandler.vb  DeveloperForm.Designer.vb  DeveloperForm.vb  MainWindow.Designer.vb  MainWindow.resx  MainWindow.vb  Octosuite.vbproj  OctosuiteDataHandler.vb  OrgProfileForm.Designer.vb  OrgProfileForm.vb  OrgReposForm.Designer.vb  OrgReposForm.vb  RepoSearchResultsForm.Designer.vb  RepoSearchResultsForm.vb  StartForm.Designer.vb  StartForm.resx  StartForm.vb  UserEventsForm.Designer.vb  UserEventsForm.resx  UserEventsForm.vb  UserFollowersForm.Designer.vb  UserFollowersForm.resx  UserFollowersForm.vb  UserFollowingForm.Designer.vb  UserFollowingForm.resx  UserFollowingForm.vb  UserGistsForm.Designer.vb  UserGistsForm.resx  UserGistsForm.vb  UserOrgsForm.Designer.vb  UserOrgsForm.resx  UserOrgsForm.vb  UserProfileForm.Designer.vb  UserProfileForm.resx  UserProfileForm.vb  UserReposForm.Designer.vb  (+7 more)
Octosuite GUI/Octosuite/My Project/: Application.Designer.vb  Resources.Designer.vb
octosuite/: __init__.py  _api.py  _base.py  _cli.py  _core.py  _coreutils.py  _meta.py  _parsers.py  _processors.py  _utils.py  api.py  attributes.py  base.py  commands.py  config.py  coreutils.py  csv_loggers.py  data.py  docs.py  executor.py  help.py  helper.py  helpers.py  main.py  managers.py  masonry.py  messages.py  miscellaneous.py  octosuite.py  parser.py  version.py
octosuite/data/: settings.json
octosuite/data/organisation/: profile.json
octosuite/data/other/: gist.json  issue.json  topic.json
octosuite/data/repo/: issue.json  profile.json  release.json
octosuite/data/repository/: issue.json  release.json
octosuite/data/user/: event.json  org.json  organisation.json  profile.json  summary.json
tests/: conftest.py  test_api.py
