[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "octosuite"
version = "4.0.0"
description = "GitHub Data Analysis Framework."
readme = "README.md"
license = "GNU General Public License v3 (GPLv3)"
keywords = ["github-api", "github", "data-analysis"]
authors = ["Richard Mwewa <rly0nheart@duck.com>"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Visual Basic",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: English"
]
homepage = "https://www.bellingcat.com"
documentation = "https://octosuite-wiki.readthedocs.io"
repository = "https://github.com/bellingcat/octosuite"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "*"
pandas = "*"
rich = "*"
rich-argparse = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-html = "*"

[tool.poetry.scripts]
octosuite = "octosuite._cli:run"
