[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "octosuite"
version = "4.0.0"
description = "A GitHub Data Analysis Framework."
readme = "README.md"
license = "GNU General Public License v3 (GPLv3)"
keywords = ["github-api", "github", "data-analysis"]
authors = ["Richard Mwewa <rly0nheart@duck.com>"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Visual Basic",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: English"
]
homepage = "https://www.bellingcat.com"
documentation = "https://octosuite-wiki.readthedocs.io"
repository = "https://github.com/bellingcat/octosuite"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/bellingcat/octosuite/issues"

[tool.poetry.dependencies]
python = "^3.10"
psutil = "^5.9.4"
aiohttp = "^3.9.5"
pandas = "^2.2.2"
rich = "^13.7.1"
rich-argparse = "^1.5.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
poetry = "^1.8.3"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"

[tool.poetry.scripts]
octosuite = "octosuite._cli:run"
